--- a/Financier.Web/Areas/Expenses/Views/MyHome/GetMonthlyPayments.cshtml
+++ b/Financier.Web/Areas/Expenses/Views/MyHome/GetMonthlyPayments.cshtml
@@ -136,7 +136,7 @@
 
     var form = new MyForm(".input");
     form.setSubmitButton(() => {
-      var request = (render) => {
+      var request = (name, render) => {
         var client = new Apollo.lib.ApolloClient({
           networkInterface: Apollo.lib.createNetworkInterface({
             uri: '/graphql/home',
@@ -158,7 +158,7 @@
                 $interestRate: Decimal!,
                 $amortizationPeriodInMonths: Int!
               ) {
-                getFixedMortgagePayments(
+                ${name}(
                   initialCash: $initialCash,
                   initialDebt: $initialDebt,
                   purchasedAt: $purchasedAt,
@@ -185,15 +185,22 @@
             }
           })
           .then(response => {
-            render(response.data.getFixedMortgagePayments);
+            render(response.data[name]);
           });
       };
-      request((data) => {
+      request("getFixedMortgagePayments", (data) => {
         var results = new Payments(".results#fixed-rate", data);
 
         results.clear();
         results.render();
-      })
+      });
+
+      request("getFixedMortgagePaymentsWithPrepayments", (data) => {
+        var results = new Payments(".results#fixed-rate-with-prepayments", data);
+
+        results.clear();
+        results.render();
+      });
     });
     form.render();
 
