Display yearly total, and total across all years

--- a/Financier.Web/wwwroot/css/Areas/Expenses/MyHome/GetMonthlyPayments.less
+++ b/Financier.Web/wwwroot/css/Areas/Expenses/MyHome/GetMonthlyPayments.less
@@ -25,6 +25,15 @@
       height: 1em;
     }
 
+    td.year {
+      vertical-align: middle;
+      text-align: center;
+    }
+
+    td.total {
+      font-family: courier;
+    }
+
     .payment {
       display: flex;
       flex-flow: row nowrap;
