--- a/Financier.Web/Areas/Expenses/Views/MyHome/GetMonthlyPayments.cshtml
+++ b/Financier.Web/Areas/Expenses/Views/MyHome/GetMonthlyPayments.cshtml
@@ -66,7 +66,7 @@
       }
 
       get orderedData() {
-        return _.orderBy(this.data, datum => datum["order"]);
+        return _.orderBy(this.data, item => item.order);
       }
 
       push(paymentType, order, datum) {
@@ -81,12 +81,10 @@
           };
         });
         var values = _.orderBy(values, item => item["at"], "asc");
+        var dataByYear = _.groupBy(values, item => item["at"].getFullYear())
+        var yearlyDataList = _.map(dataByYear, (amounts, year) => new YearlyData(year, amounts));
 
-        this.data[paymentType] = {
-          "order": order,
-          "paymentType": paymentType,
-          "values": _.groupBy(values, item => item["at"].getFullYear())
-        };
+        this.data[paymentType] = new PaymentsData(order, paymentType, yearlyDataList);
       }
 
       render() {
@@ -99,9 +97,12 @@
           <thead>
             <tr>
         `;
-        var rows = this.orderedData.map(datum => {
+        var emptyColumn = `
+          <th></th>
+        `;
+        var columns = this.orderedData.map(datum => {
           return `
-            <th>${datum["paymentType"]}</th>
+            <th>${datum.type}</th>
           `;
         });
         var end = `
@@ -109,52 +110,93 @@
           </thead>
         `;
 
-        var html = start + rows.join("\n") + end;
+        var html = ""
+          + start 
+          + emptyColumn
+          + columns.join("\n") 
+          + end;
         this.getContainer().append(html);
       }
 
       renderBody() {
-        var rows = this.years.map(year => {
-          var start = `
-            <tr id="${year}" class="year">
-          `;
-          var end = `
-            </tr>
-            <tr class="spacer"></tr>
-          `;
-          var yearlyData = this.orderedData.map(datum => datum["values"]).map(datum => {
-            var element = "";
-            if (typeof(datum[year]) === "undefined") {
-              return `<td></td>`;
-            }
-
-            var startColumn = `
-              <td>
-            `;
-            var paymentElements = datum[year].map(payment => {
-              return `
-                <div class="payment">
-                  <div class="at">
-                    ${payment["at"].toFormatted}
-                  </div>
-
-                  <div class="amount">
-                    ${payment["amount"].toFixed(2)}
-                  </div>
-                </div>
+        var rows = this.years
+          .map(year => {
+            var start = `
+                <tr id="${year}" class="year">
               `;
-            });
-            var endColumn = `
-              </td>
+
+            var yearColumn = `
+              <td class="year">${year}</td>
+            `;
+            var columnElements = this.orderedData
+              .map(item => item.getPaymentsForYear(year))
+              .map(yearlyData => {
+                var startColumn = `
+                  <td>
+                `;
+                var paymentElements = yearlyData.amounts.map(payment => {
+                  return `
+                    <div class="payment">
+                      <div class="at">
+                        ${payment.at.toFormatted}
+                      </div>
+
+                      <div class="amount">
+                        ${payment.amount.toFixed(2)}
+                      </div>
+                    </div>
+                  `;
+                });
+                var totalElement = `
+                  <div class="payment total">
+                    <span>Total:&nbsp;${yearlyData.total.toFixed(2)}</span>
+                  </div>
+                `;
+                var endColumn = `
+                  </td>
+                `;
+
+                return ""
+                  + startColumn 
+                  + paymentElements.join("\n") 
+                  + totalElement
+                  + endColumn;
+              });
+            var end = `
+              </tr>
+              <tr class="spacer"></tr>
             `;
 
-            return startColumn + paymentElements.join("\n") + endColumn;
+            return ""
+              + start 
+              + yearColumn
+              + columnElements.join("\n") 
+              + end;
           });
 
-          return start + yearlyData.join("\n") + end;
-        });
-
         this.getContainer().append(rows);
+        this.getContainer().append(this.getTotalRow());
+      }
+
+      getTotalRow() {
+        var start = `
+          <tr>
+        `;
+        var emptyColumn = `
+          <td></td>
+        `;
+        var columns = this.orderedData
+          .map(datum => datum.total.toFixed(2))
+          .map(total => `<td class="total">Total:&nbsp;${total}</td>`);
+        var end = `
+          </tr>
+        `;
+
+        return ""
+          + start
+          + emptyColumn
+          + columns
+          + end;
       }
 
       empty() {
@@ -167,9 +209,13 @@
       }
 
       get years() {
-        var years = _.uniq(this.orderedData.flatMap(datum => datum["values"]).flatMap(values => _.keys(values)).map(v => +v));
-
-        return _.orderBy(years, year => year, "asc");
+        return _.orderBy(
+          _.uniq(
+            this.orderedData
+              .flatMap(item => item.years)
+              .flatMap(item => item.year)
+          )
+        );
       }
     }
 
@@ -200,6 +246,87 @@
         // this
         //   .createPaymentElement(`.items#${identifer}`, item.items)
         //   .render();
+      }
+    }
+
+    class YearlyData {
+      constructor(year, amounts) {
+        this.year = +year;
+        this.amounts = (amounts || []).map(item => {
+          if (typeof(item) === 'object') {
+            return new PaymentData(item.at, item.amount)
+          } else {
+            return item;
+          }
+        });
+      }
+
+      get total() {
+        return _.sum(this.amounts.map(item => +item.amount));
+      }
+
+      get isNull() {
+        return false;
+      }
+    }
+
+    class NullYearlyData {
+      constructor() {
+        this.year = -1;
+        this.amounts = [];
+      }
+
+      get total() {
+        return 0;
+      }
+
+      get isNull() {
+        return true;
+      }
+    }
+
+    class PaymentData {
+      constructor(at, amount) {
+        this.at = at;
+        this.amount = amount;
+      }
+
+      get isNull() {
+        return false;
+      }
+    }
+
+    class NullPaymentData {
+      constructor() {
+        this.at = new Date(0, 0, 0);
+        this.amount = 0.00;
+      }
+
+      get isNull() {
+        return true;
+      }
+    }
+
+    class PaymentsData {
+      constructor(order, type, years) {
+        this.order = order || -1;
+        this.type = type || "";
+        this.years = years || [];
+      }
+
+      getPaymentsForYear(year) {
+        var payments = this.years
+          .filter(datum => datum.year == year)
+
+        if ((payments || []).length < 1) {
+          return new NullYearlyData();
+        }
+
+        return payments[0];
+      }
+
+      get total() {
+        return _.sum(this.years.map(year => year.total));
       }
     }
 
