--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -1,3 +1,15 @@
+.graph {
+  .chart {
+    .tick {
+      font-size: 6px;
+
+      text {
+        text-anchor: end;
+      }
+    }
+  }
+}
+
 .values {
   .header {
     div {
