Hovered Values show white-coloured text

--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -132,6 +132,7 @@ body {
     }
 
     .item:hover {
+      color: white;
       background-color: darkgrey;
     }
 
@@ -180,6 +181,7 @@ body {
 
   .total {
     &:hover {
+      color: white;
       background-color: darkgrey;
     }
 
