--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -3,6 +3,7 @@
   src: url("./fonts/Roboto-Regular.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
+  font-size: 16px;
 }
 
 body {
@@ -26,17 +27,26 @@ body {
   }
 }
 
-.navigation {
-  width: 60%;
+.time-navigation {
   display: flex;
   flex-flow: wrap;
-  flex-direction: row;
-  column-gap: 30px;
+  flex-direction: column;
+  row-gap: 1.5em;
 
-  div {
-    padding: 12px 6px;
+  .yearly-navigation {
+    display: flex;
+    flex-flow: wrap;
+    flex-direction: row;
+    row-gap: 0.5em;
+    column-gap: 0.5em;
+  }
+
+  .button {
+    padding: 0.75em 0.375em;
     border: solid;
     border-width: 1.5px;
+    width: 14em;
+    text-align: center;
 
     border-color: blue;
     color: blue;
@@ -70,24 +80,34 @@ body {
       flex-direction: row;
       column-gap: 30px;
 
-      div.enabled {
-        padding: 12px 6px;
+      .button {
+        padding: 0.75em 0.375em;
         border: solid;
         border-width: 1.5px;
+        width: 14em;
+        text-align: center;
 
-        border-color: blue;
-        color: blue;
-        cursor: pointer;
-      }
+        &.enabled {
+          // padding: 12px 6px;
+          // border: solid;
+          // border-width: 1.5px;
+          // width: 14em;
+          // text-align: center;
 
-      div.disabled {
-        padding: 12px 6px;
-        border: solid;
-        border-width: 1.5px;
+          border-color: blue;
+          color: blue;
+          cursor: pointer;
+        }
 
-        border-color: grey;
-        color: grey;
-        cursor: initial;
+        &.disabled {
+          // padding: 12px 6px;
+          // border: solid;
+          // border-width: 1.5px;
+
+          border-color: grey;
+          color: grey;
+          cursor: initial;
+        }
       }
     }
 
