--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -118,13 +118,25 @@ body {
   flex-direction: row;
 
   .graph {
-    width: 75%;
+    width: 100%;
 
     .chart {
+      .label {
+        font-size: 6px;
+      }
+
       .tick {
         font-size: 6px;
+      }
 
+      .x-axis {
         text {
+          text-anchor: middle;
+        }
+      }
+
+      .y-axis {
+        .label {
           text-anchor: end;
         }
       }
@@ -138,11 +150,11 @@ body {
   flex-direction: row;
 
   .criteria {
-    width: 25%;
+    width: 20%;
   }
 
   .graph {
-    width: 75%;
+    width: 80%;
 
     .chart {
       .tick {
