--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -161,6 +161,14 @@ body {
     width: 80%;
 
     .chart {
+      .amount {
+        display: block;
+
+        &.hidden {
+          display: none;
+        }
+      }
+
       .tick {
         font-size: 6px;
 
