Hover mouse highlights the line chosen

--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -131,7 +131,16 @@ body {
 
       .x-axis {
         text {
+          // display: none;
           text-anchor: middle;
+        }
+      }
+
+      path, text {
+        display: block;
+
+        &.hidden {
+          display: none;
         }
       }
 
