--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -58,15 +58,20 @@ body {
   .date-range {
     display: flex;
     flex-flow: wrap;
-    flex-direction: row;
+    flex-direction: column;
 
     .date-picker {
       display: flex;
-      width: 50%;
+      flex-direction: column;
 
       .container {
+        display: flex;
         flex-direction: row;
-        padding: 0 30% 0 30%;
+        justify-content: space-between;
+
+        .name {
+          margin: auto 0;
+        }
       }
     }
   }
