Disabled buttons display a not-allowed cursor

--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -101,7 +101,7 @@ body {
         &.disabled {
           border-color: grey;
           color: grey;
-          cursor: initial;
+          cursor: not-allowed;
         }
       }
     }
