--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -200,11 +200,11 @@ body {
   }
 }
 
-.values {
+@mixin values($width) {
   .header {
     div {
       font-size: 20px;
-      width: 20%;
+      width: $width;
     }
 
     div:first-child {
@@ -258,7 +258,7 @@ body {
     .item {
       div {
         padding: 2px 0px 2px 0px;
-        width: 20%;
+        width: $width;
         font-family: monospace;
       }
 
@@ -296,7 +296,7 @@ body {
 
     div {
       padding: 7px 0px 2px 0px;
-      width: 20%;
+      width: $width;
       font-family: monospace;
     }
 
@@ -325,127 +325,11 @@ body {
   }
 }
 
+// TODO: Move into a mixin!
+.values {
+  @include values(20%);
+}
+
 .itemized-values {
-  .header {
-    div {
-      font-size: 20px;
-      width: 15%;
-    }
-
-    div:first-child {
-      width: 39%;
-
-      border-right-color: black;
-      border-right-style: solid;
-      border-right-width: 1px;
-    }
-
-    div:last-child {
-    }
-
-    display: flex;
-    flex-flow: wrap;
-
-    justify-content: space-between;
-    text-align: left;
-
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    border-bottom-color: black;
-  }
-
-  .items {
-    .item {
-      text-color: black;
-      color: black;
-      cursor: default;
-
-      &.clickable {
-        cursor: pointer;
-      }
-    }
-
-    .item:hover {
-      color: white;
-      background-color: darkgrey;
-    }
-
-    .item:first-child {
-      div {
-        padding: 7px 0px 2px 0px;
-      }
-
-      div:first-child {
-        padding: 7px 0px 2px 0px;
-      }
-    }
-
-    .item {
-      div {
-        padding: 2px 0px 2px 0px;
-        width: 15%;
-        font-family: monospace;
-      }
-
-      div:first-child {
-        width: 39%;
-
-        padding: 2px 0px 2px 0px;
-        border-right-color: black;
-        border-right-style: solid;
-        border-right-width: 1px;
-      }
-
-      div:last-child {
-        padding-right: 0px;
-      }
-
-      display: flex;
-      flex-flow: wrap;
-      flex-direction: row;
-
-      justify-content: space-between;
-      text-align: left;
-
-      border-bottom-width: 1px;
-      border-bottom-style: solid;
-      border-bottom-color: blue;
-    }
-  }
-
-  .total {
-    &:hover {
-      color: white;
-      background-color: darkgrey;
-    }
-
-    div {
-      padding: 7px 0px 2px 0px;
-      width: 15%;
-      font-family: monospace;
-    }
-
-    div:first-child {
-      width: 39%;
-
-      padding: 7px 0px 2px 0px;
-      border-right-color: black;
-      border-right-style: solid;
-      border-right-width: 1px;
-    }
-
-    div:last-child {
-      padding-right: 0px;
-    }
-
-    display: flex;
-
-    flex-flow: wrap;
-    flex-direction: row;
-
-    font-size: 20px;
-
-    justify-content: space-between;
-    text-align: left;
-  }
+  @include values(15%);
 }
