The text of hidden Monthly lines is transparent

--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -151,6 +151,12 @@ body {
         }
       }
 
+      text {
+        &.hidden {
+          opacity: 20%;
+        }
+      }
+
       .y-axis {
         .label {
           text-anchor: end;
