--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -208,28 +208,32 @@ body {
   }
 }
 
-@mixin values($width) {
+@mixin values($first-child-width, $width, $last-child-width) {
   .header {
     div {
       font-size: 20px;
       width: $width;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     div:first-child {
-      width: 39%;
+      width: $first-child-width;
 
+      padding-left: 0px;
+      padding-right: 10px;
       border-right-color: black;
       border-right-style: solid;
       border-right-width: 1px;
     }
 
     div:last-child {
+      width: $last-child-width;
+      padding-right: 0px;
     }
 
     display: flex;
-    flex-flow: wrap;
 
-    justify-content: space-between;
     text-align: left;
 
     border-bottom-width: 2px;
@@ -255,25 +259,22 @@ body {
 
     .item:first-child {
       div {
-        padding: 7px 0px 2px 0px;
-      }
-
-      div:first-child {
-        padding: 7px 0px 2px 0px;
+        padding-top: 7px;
+        padding-bottom: 2px;
       }
     }
 
     .item {
       div {
-        padding: 2px 0px 2px 0px;
+        padding: 2px 10px 2px 10px;
         width: $width;
         font-family: monospace;
       }
 
       div:first-child {
-        width: 39%;
+        width: $first-child-width;
 
-        padding: 2px 0px 2px 0px;
+        padding: 2px 10px 2px 0px;
         border-right-color: black;
         border-right-style: solid;
         border-right-width: 1px;
@@ -281,13 +282,12 @@ body {
 
       div:last-child {
         padding-right: 0px;
+        width: $last-child-width;
       }
 
       display: flex;
-      flex-flow: wrap;
       flex-direction: row;
 
-      justify-content: space-between;
       text-align: left;
 
       border-bottom-width: 1px;
@@ -303,15 +303,15 @@ body {
     }
 
     div {
-      padding: 7px 0px 2px 0px;
+      padding: 7px 10px 2px 10px;
       width: $width;
       font-family: monospace;
     }
 
     div:first-child {
-      width: 39%;
+      width: $first-child-width;
 
-      padding: 7px 0px 2px 0px;
+      padding: 7px 10px 2px 0px;
       border-right-color: black;
       border-right-style: solid;
       border-right-width: 1px;
@@ -319,25 +319,24 @@ body {
 
     div:last-child {
       padding-right: 0px;
+      width: $last-child-width;
     }
 
     display: flex;
 
-    flex-flow: wrap;
     flex-direction: row;
 
     font-size: 20px;
 
-    justify-content: space-between;
     text-align: left;
   }
 }
 
 // TODO: Move into a mixin!
 .values {
-  @include values(20%);
+  @include values(8%, 18%, 19%);
 }
 
 .itemized-values {
-  @include values(15%);
+  @include values(8%, 18%, 19%);
 }
