feat(tags): change the tags of an item

--- a/Financier.Web.FinancialStatements/src/index.scss
+++ b/Financier.Web.FinancialStatements/src/index.scss
@@ -291,6 +291,16 @@ body {
         text-align: right;
       }
 
+      .tags {
+        &.displayed {
+          display: block;
+        }
+
+        &.none {
+          display: none;
+        }
+      }
+
       display: flex;
       flex-direction: row;
       text-align: left;
